ON-139: fix some issues